[tool.poetry]
name = "rlbook"
version = "0.1.0"
description = ""
authors = ["Bashar Jaan Khan <basharjaankhan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
black = {version = "^23.1a1", allow-prereleases = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
